# DockerComposeExample

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  compose.yaml  docker-compose.yaml  docker-rebuild.ps1  install.ps1  pyproject.toml
.github/ISSUE_TEMPLATE/: bugfix.md  config.yaml
.github/workflows/: 03-ci.yaml
tests/: test_dockercomposeexample.py  test_pytontemplateit.py
