[build-system]
requires = [
    "build",
    "pytest-runner",
    "setuptools >= 68",
    "toml",
    "wheel",
    "setuptools-git >= 1.1",
]
build-backend = "setuptools.build_meta"

[project]
name = 'DockerComposeExample'
version = '0.0.1'
authors = [
    { name = 'Hendrik du Toit', email = 'hendrik@brightedge.co.za' },
]
description = 'Docker Compose Example'
license = { file = 'LICENSE' }
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
]
readme = { file = 'README.md', content-type = 'text/md' }
requires-python = '<3.13'
dependencies = [
    'redis',
    'flask',
]

[project.optional-dependencies]
dev = [
    'build',
    'mdformat',
    'Pygments',
    'pytest',
    'pytest-cov',
    'rstcheck',
]

[project.urls]
Changelog = 'https://github.com/hendrikdutoit/dockercomposeexample/blob/enhancement/master/ReleaseNotes.md'
Homepage = 'https://github.com/hendrikdutoit/dockercomposeexample'

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'

#[tool.coverage.run]
#source = ['src', 'tests']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ['-vv', '--ignore-glob=*\\Archive']
#addopts = ['--import-mode=importlib', "-v", "--cov=./", "--ignore-glob=*\\Archive", "--cov-report=html"]
markers = [
    "select: Run a selection of tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = 'tests'

#[tool.setuptools]
#py-modules = ["main"]
#
#[tool.setuptools.packages.find]
#where = ["src"]
#namespaces = false

[tool.setuptools.dynamic]
readme = { file = ["README.md", "UPGRADE.md"] }
